--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div>
         <p>My Name is Phil, also known as phneutral. <br> I am not known for very much intelligence, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
-            some experience in.
+            some experience in. haha
         </p>
     </div>
     <div>
