--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div>
         <p>My Name is Phil, also known as phneutral. <br> I am not known for very much intelligence, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
-            some experience in. haha
+            some experience in. 
         </p>
     </div>
     <div>
@@ -55,7 +55,7 @@
             <li>
                 I know these
                 <ul>
-                    <li>LaTeX</li>
+                    <li>LaTeX <img src="pix/latex.png" alt="my desktop + LaTeX""></li>
                     <li>Python</li>
                     <li>HTML</li>
                     <li>CSS (just a tiny bit)</li>
