changes made /Very specific. i know)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     h2 {
         color: white;
         font-family: "JetBrains Mono";
+        text-align: center;
     }
     
     p {
@@ -41,14 +42,13 @@
 <body>
     <div>
         <h1>Hello World!</h1>
+        <h2>print("Hello World"!)</h2>
+        <h2>println!("Hello World")</h2>
     </div>
     <div>
-        <h2>Hello !</h2>
-    </div>
-    <div>
-        <p>My Name is Phil, also known as phneutral. <br> I am not known for very much intelligence, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
+        <h2>My Name is Phil, also known as phneutral. <br> I am not known for very much intelligence, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
             some experience in. 
-        </p>
+        </h2>
     </div>
     <div>
         <ul>
