--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li>
                 I know these
                 <ul>
-                    <li>LaTeX <img src="pix/latex.png" alt="my desktop + LaTeX""></li>
+                    <li>LaTeX <img src="pix/latex2.jpg" alt="my desktop + LaTeX""></li>
                     <li>Python</li>
                     <li>HTML</li>
                     <li>CSS (just a tiny bit)</li>
