--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <div>
         <p>If i am honest, i dont really need to learn this, 
-            because im probably becoming a lawyer.</p>
+            because i want to become a lawyer.</p>
     </div>
 </body>
 
