--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <p>If i am honest, i dont really need to learn this, 
             because i want to become a lawyer.</p>
     </div>
+    <button type="button" onclick="alert('Hi user!')">Press me!</button>
 </body>
 
 </html>
