--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>If i am honest, i dont really need to learn this, 
             because i want to become a lawyer.</p>
     </div>
-    <button type="button" onclick="alert('Hi user!')">Press me!</button>
+    <button type="button" style="background-color: #002b21;" onclick="alert('You have been Hacked!! lol')">Get 50$ Free</button>
 </body>
 
 </html>
