--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
             <li>
                 I know these
                 <ul>
-                    <li>LaTeX <img src="pix/latex2.jpg" alt="my desktop + LaTeX""></li>
-                    <li>Python</li>
-                    <li>HTML</li>
-                    <li>CSS (just a tiny bit)</li>
+		<li>LaTeX</li>
+		<img width="1600px" height="900px" src="pix/latex2.jpg" alt="my desktop + LaTeX""></rli>
+                  <li>Python</li>
+                  <li>HTML</li>
+                  <li>CSS (just a tiny bit)</li>
             
                 </ul>
             </li>
