--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <ul>
                     <li>Java</li>
                     <li>C</li>
-                    <li>rust</li>
+                    <li>Rust</li>
 
                 </ul>
 
