--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <li>
                 I know these
                 <ul>
-		<li>LaTeX</li>
-		
+		          <li>LaTeX</li>
+                  <img src="pix/latex2.jpg" width="450"></li>
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a tiny bit)</li>
