--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 I know these
                 <ul>
 		          <li>LaTeX</li>
-                  <img src="pix/latex2.jpg" width="450"></li>
+                  <img src="pix/latex2.jpg" width="450">
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a tiny bit)</li>
