improvise adapt overcome

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         color: white;
         font-family: "JetBrains Mono";
         text-align: center;
+        font-size: 24px;
     }
     
     p {
@@ -35,6 +36,7 @@
         font-size: 20px;
         color: white;
     }
+
 </style>
 
 
@@ -42,8 +44,8 @@
 <body>
     <div>
         <h1>Hello World!</h1>
-        <h2>print("Hello World"!)</h2>
-        <h2>println!("Hello World")</h2>
+        <h1>print("Hello World"!)</h1>
+        <h1>println!("Hello World")</h1>
     </div>
     <div>
         <h2>My Name is Phil, also known as phneutral. <br> I am not known for very much intelligence, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
