--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>println!("Hello World")</h1>
     </div>
     <div>
-        <h2>My Name is Phil, also known as phneutral. <br> I am not known for very much intelligence, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
+        <h2>My Name is phneutral26! <br> I am not known for Coding Skills, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
             some experience in. 
         </h2>
     </div>
@@ -78,10 +78,9 @@
         </ul>
     </div>
     <div>
-        <p>If i am honest, i dont really need to learn this, 
-            because i want to become a lawyer.</p>
+        <p>I want to become a lawyer in the future!</p>
     </div>
-    
+    <button> Go to Page 2!</button>
 </body>
 
 </html>
