--- a/index.html
+++ b/index.html
@@ -36,7 +36,42 @@
         font-size: 20px;
         color: white;
     }
+    button {
+        background-color: #002b36;
+        font-family: "JetBrains Mono";
+        font-size: 20px;
+        color: white;
+        
+    }
+    button {
+  background-color: #002b56;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
 
+.button1 {border-radius: 2px;}
+.button2 {border-radius: 4px;}
+.button3 {border-radius: 8px;}
+.button4 {border-radius: 12px;}
+.button5 {border-radius: 50%;}
+.GFG {
+            background-color: #002b56;
+            border: 2px solid #002b36;
+            color: white;
+            padding: 5px 10px;
+            text-align: center;
+            display: inline-block;
+            font-size: 20px;
+            margin: 10px 30px;
+            cursor: pointer;
+            border-radius: 10px;
+}
 </style>
 
 
@@ -80,7 +115,10 @@
     <div>
         <p>I want to become a lawyer in the future!</p>
     </div>
-    <button> Go to Page 2!</button>
+    <button class="GFG" 
+    onclick="window.location.href = 'https://ide.geeksforgeeks.org';">
+        Click Here
+    </button>
 </body>
 
 </html>
