my github is linked now

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p>I want to become a lawyer in the future!</p>
     </div>
     <button class="GFG" 
-    onclick="window.location.href = 'https://ide.geeksforgeeks.org';">
+    onclick="window.location.href = 'https://github.com/phneutral26';">
         Click Here
     </button>
 </body>
