--- a/index.html
+++ b/index.html
@@ -116,9 +116,13 @@
         <p>I want to become a lawyer in the future!</p>
     </div>
     <button class="GFG" 
-    onclick="window.location.href = 'https://github.com/phneutral26';">
-        Click Here
-    </button>
+    onclick="window.location.href = 'https://github.com/phneutral26P';">
+    My GitHub    
+</button>
+<button class="GFG" 
+    onclick="window.location.href = 'https:youtube.com/watch?v=IO9XlQrEt2Y;">
+    My favourite Video    
+</button>
 </body>
 
 </html>
