--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h1>println!("Hello World")</h1>
     </div>
     <div>
-        <h2>My Name is phneutral26! <br> I am not known for Coding Skills, but <b>I want to learn HTML and CSS side by side with python,<br> which i already have 
+        <h2>My Name is phneutral26! <br> I am not known for Coding Skills, but I want to learn HTML and CSS side by side with python,<br> which i already have 
             some experience in. 
         </h2>
     </div>
@@ -116,12 +116,12 @@
         <p>I want to become a lawyer in the future!</p>
     </div>
     <button class="GFG" 
-    onclick="window.location.href = 'https://github.com/phneutral26P';">
+    onclick="window.location.href = 'https://github.com/phneutral26;">
     My GitHub    
 </button>
 <button class="GFG" 
-    onclick="window.location.href = 'https:youtube.com/watch?v=IO9XlQrEt2Y;">
-    My favourite Video    
+    onclick="window.location.href = 'https://youtube.com/watch?v=IO9XlQrEt2Y;">
+    My favourite Videos   
 </button>
 </body>
 
