--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <img src="pix/latex2.jpg" width="1000">
                   <li>Python</li>
                   <li>HTML</li>
-                  <li>CSS (just a tiny bit)</li>
+                  <li>CSS (just a teeny tiny bit)</li>
 
                 </ul>
             </li>
@@ -106,6 +106,7 @@
                     <li>Java</li>
                     <li>C</li>
                     <li>Rust</li>
+		    <li>Maybe also Assembly,so i can make an Operating System</li>
 
                 </ul>
 
