--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <img src="pix/latex2.jpg" width="1000">
                   <li>Python</li>
                   <li>HTML</li>
-                  <li>CSS (just a teeny tiny bit)</li>
+                  <li>CSS (just a teeneee‚y tiny bit)</li>
 
                 </ul>
             </li>
