--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
             <li>
                 I know these
                 <ul>
-		          <li>LaTeX</li>
-                  <img src="pix/latex2.jpg" width="1000">
+		              <li>LaTeX <img width="1px" height="1px" src="pix/latex2.jpg" alt="my desktop + LaTeX""></li>
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a teeneee‚y tiny bit)</li>
