--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li>
                 I know these
                 <ul>
-		              <li>LaTeX <img width="1px" height="1px" src="pix/latex2.jpg" alt="my desktop + LaTeX""></li>
+		              <li>Latex</li>
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a teeneee‚y tiny bit)</li>
