Change Buttons, now they actually Work!

--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
     <div>
         <ul>
             <li>
-                I know these
+                I know these ( a bit at least)
                 <ul>
 		              <li>Latex</li>
                   <li>Python</li>
                   <li>HTML</li>
-                  <li>CSS (just a teeneee‚y tiny bit)</li>
-
-                </ul>
+                  <li>CSS (just a teeny‚ tiny bit)</li>
+        </ul>
             </li>
             <li>
                 I want to know these!
@@ -105,24 +104,21 @@
                     <li>Java</li>
                     <li>C</li>
                     <li>Rust</li>
-		    <li>Maybe also Assembly,so i can make an Operating System</li>
+		                <li>Maybe also Assembly,so i can make an Operating System</li>
 
                 </ul>
-
             </li>
         </ul>
     </div>
     <div>
         <p>I want to become a lawyer in the future!</p>
     </div>
-    <button class="GFG"
-    onclick="window.location.href = 'https://github.com/phneutral26;">
-    My GitHub
-</button>
-<button class="GFG"
-    onclick="window.location.href = 'https://youtube.com/watch?v=IO9XlQrEt2Y;">
-    My favourite Videos
-</button>
+    <form class="GFG" action="https://github.com/phneutral26">
+    <input type="submit" value="My Github" />
+</form>
+      <form class="GFG" action="https://youtu.be/IO9XlQrEt2Y">
+      <input type="submit" value="My favorite Video"/>
+</form>
 </body>
 
 </html>
