Change Font and make it accesible

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,30 +17,30 @@
     h1 {
         color: white;
         text-align: center;
-        font-family: "JetBrains Mono";
+        font-family: "Roboto Mono";
     }
 
     h2 {
         color: white;
-        font-family: "JetBrains Mono";
+        font-family: "Roboto Mono";
         text-align: center;
         font-size: 24px;
     }
 
     p {
-        font-family: "JetBrains Mono";
+        font-family: "Roboto Mono";
         font-size: 20px;
         color: white;
     }
 
     li {
-        font-family: "JetBrains Mono";
+        font-family: "Roboto Mono";
         font-size: 20px;
         color: white;
     }
     button {
         background-color: #002b36;
-        font-family: "JetBrains Mono";
+        font-family: "Roboto Mono";
         font-size: 20px;
         color: white;
 
