--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <h1>println!("Hello World")</h1>
     </div>
     <div>
-        <h2>My Name is Phil! <br> I want to learn HTML and CSS side by side with python,<br> which i already have
+        <h2>My Name is phneutral26
+! <br> I want to learn HTML and CSS side by side with python,<br> which i already have
             some experience in.
         </h2>
     </div>
@@ -95,7 +96,7 @@
             <li>
                 I know these ( a bit at least)
                 <ul>
-		              <li>Latex</li>
+		  <li>Latex</li>
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a teeny‚ tiny bit)</li>
