I did this on an iPad…

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a teeny‚ tiny bit)</li>
+			<li>Right now i am learning Kotlin with my Friend.</li>
         </ul>
             </li>
             <li>
