--- a/src/index.html
+++ b/src/index.html
@@ -4,80 +4,13 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About ME</title>
 </head>
-<style>
-    body {
-        background-color: #002b36;
-    }
-
-    h1 {
-        color: white;
-        text-align: center;
-        font-family: "Roboto Mono";
-    }
-
-    h2 {
-        color: white;
-        font-family: "Roboto Mono";
-        text-align: center;
-        font-size: 24px;
-    }
-
-    p {
-        font-family: "Roboto Mono";
-        font-size: 20px;
-        color: white;
-    }
-
-    li {
-        font-family: "Roboto Mono";
-        font-size: 20px;
-        color: white;
-    }
-    button {
-        background-color: #002b36;
-        font-family: "Roboto Mono";
-        font-size: 20px;
-        color: white;
-
-    }
-    button {
-  background-color: #002b56;
-  border: none;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-}
-
-.button1 {border-radius: 2px;}
-.button2 {border-radius: 4px;}
-.button3 {border-radius: 8px;}
-.button4 {border-radius: 12px;}
-.button5 {border-radius: 50%;}
-.GFG {
-            background-color: #002b56;
-            border: 2px solid #002b36;
-            color: white;
-            padding: 5px 10px;
-            text-align: center;
-            display: inline-block;
-            font-size: 20px;
-            margin: 10px 30px;
-            cursor: pointer;
-            border-radius: 10px;
-}
-</style>
-
-
 
 <body>
     <div>
@@ -87,8 +20,7 @@
     </div>
     <div>
         <h2>My Name is phneutral26
-! <br> I want to learn HTML and CSS side by side with python,<br> which i already have
-            some experience in.
+! <br>
         </h2>
     </div>
     <div>
@@ -96,7 +28,8 @@
             <li>
                 I know these ( a bit at least)
                 <ul>
-		  <li>Latex</li>
+                  <li>Latex</li>
+                  <li>Java</li>
                   <li>Python</li>
                   <li>HTML</li>
                   <li>CSS (just a teeny‚ tiny bit)</li>
